--- a/index.html
+++ b/index.html
@@ -889,35 +889,42 @@
     <script>
         async function fetchPlayersData() {
             const response = await fetch(
-                "https://raw.githubusercontent.com/widbuntu/vbdb-info/refs/heads/main/data/test_sch.csv"
+                "https://raw.githubusercontent.com/widbuntu/vbdb-info/refs/heads/main/data/players.csv"
             );
             const csvText = await response.text();
             const rows = csvText.split("\n").filter((row) => row.trim() !== "");
             const dataRows = rows.slice(1);
-            scheduleData = dataRows.map((row) => {
+            playersData = dataRows.map((row) => {
                 const fields = splitLine(row);
                 return {
-                    date: fields[0] || "",
-                    match: fields[1] || "",
-                    results: fields[2] || "",
-                    box_score_url: fields[3] || "",
+                    No: fields[0] || "",
+                    Name: fields[1] || "",
+                    Class: fields[2] || "",
+                    Position: fields[3] || "",
+                    Height: fields[4] || "",
+                    Hometown: fields[5] || "",
+                    'High School': fields[6] || "",
                 };
             });
-            console.log("Schedule Data:", scheduleData);
-            populateScheduleTable(scheduleData);
+            console.log("Players Data:", playersData);
+            populateScheduleTable(playersData);
             populateDropdowns();
         }
 
         function populateScheduleTable(data) {
-            const tbody = document.querySelector("#schTable tbody");
+            const tbody = document.querySelector("#playersTable tbody");
             tbody.innerHTML = "";
             data.sort((a, b) => new Date(a.date) - new Date(b.date));
             data.forEach((row) => {
                 const rowElement = document.createElement("tr");
                 rowElement.innerHTML = `
-            <td style="width:2%">${row.date.trim()}</td>
+            <td style="width:2%">${row.No.trim()}</td>
             <td style="width:15%">${row.match.trim()}</td>
-            <td style="width:25%">${row.results.trim()} <a href="${row.box_score_url.trim()}" target="_blank">View</a></td>
+            <td style="width:15%">${row.match.trim()}</td>
+            <td style="width:15%">${row.match.trim()}</td>
+            <td style="width:15%">${row.match.trim()}</td>
+            <td style="width:15%">${row.match.trim()}</td>
+            <td style="width:15%">${row.match.trim()}</td>
         `;
                 tbody.appendChild(rowElement);
             });
